--- a/src/pages/Root.module.css
+++ b/src/pages/Root.module.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   gap: 6.25em;
-  padding: 4.6875em var(--space-s);
+  padding: var(--space-s);
 }
 
 .hero {
